plugin/src/test/resources/testData/foo/language/annotators/functions/MissingFinalStringDoubleQuote_expected.camel
${headerAs('foo, java.lang.String)<error descr="Unterminated String Literal">}</error><EOLError descr="'{CamelTokenType )}' or '{CamelTokenType ,}' expected, unexpected end of file"></EOLError>